--- a/class_projects/The_Game_Project/index.html
+++ b/class_projects/The_Game_Project/index.html
@@ -36,9 +36,9 @@
 
     <div class="flex-container">
       <div class="player-1-container">Player 1</div>
-      <button class="rockOption">Rock</button>
-      <button class="paperOption">Paper</button>
-      <button class="scissorsOption">Scissors</button>
+      <button class="options">Rock</button>
+      <button class="options">Paper</button>
+      <button class="options">Scissors</button>
       </div>
       <br>
   
