--- a/class_projects/The_Game_Project/index.html
+++ b/class_projects/The_Game_Project/index.html
@@ -35,7 +35,8 @@
     </div>     -->
 
     <div class="flex-container">
-      <div class="player-1-container">Player 1</div>
+      <div class="player-1-container">Player 1 > </div>
+      <br>
       <button class="options">Rock</button>
       <button class="options">Paper</button>
       <button class="options">Scissors</button>
